<resources>
    <string name="facebook_app_id" translatable="false">608959455805960</string>
    <string name="app_name">Zego</string>
    <string name="login">Accedi</string>
    <string name="signup">Registrati</string>
    <string name="ahead">Avanti</string>
    <string name="sms_sent_to">Inviato un sms a </string>
    <string name="insert_here_pin">\nDigita il pin </string>
    <string name="problem_to_receive_code">Non hai ricevuto l\'SMS?</string>
    <string name="send_again">Invia di nuovo</string>
    <string name="pin_verification">PIN di verifica</string>
    <string name="insert_mobile_number">Digita il tuo numero di telefono</string>
    <string name="hint_sms">Riceverai un SMS di verifica</string>
    <string name="term_condition">Ho letto e accetto Termini e Condizioni\ne trattamento dati come da Privacy Policy</string>
    <string name="service_term">Termini e Condizioni</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_term_cond">http://www.zegoapp.com/it/termini-e-condizioni</string>
    <string name="complete_title">Completa</string>
    <string name="complete_with_fb">Completa con Facebook</string>
    <string name="name">nome</string>
    <string name="surname">cognome</string>
    <string name="email">email</string>
    <string name="promo_code">Codice Promo</string>
    <string name="promo_label">Hai un codice promo?</string>
    <string name="promo_code_hint">Inserisci codice promo</string>
    <string name="login_with_fb">Accedi con Facebook</string>
    <string name="insert_here_your_payment_method">Inserisci i dati della carta</string>
    <string name="mm_aa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="payment_method">Metodo di Pagamento</string>
    <string name="tap_to_share">Consiglia e ricevi 5€</string>
    <string name="become_driver">Diventa Driver</string>
    <string name="driver_area">Area Driver</string>
    <string name="mod_profile_image">Modifica\nfoto profilo</string>
    <string name="email_lavoro">email lavoro</string>
    <string name="profile_title">Profilo</string>
    <string name="address_lavoro">indirizzo lavoro</string>
    <string name="home_address">indirizzo casa</string>
    <string name="collega_with_fb">Collega con Facebook</string>
    <string name="save">Salva</string>
    <string name="edit_mobile">Modifica telefono</string>
    <string name="edit_wemail">Modifica email lavoro</string>
    <string name="edit_email">Modifica email</string>
    <string name="edit_surname">Modifica cognome</string>
    <string name="edit_name">Modifica nome</string>
    <string name="edit_home_address">Inserisci indirizzo casa</string>
    <string name="edit_work_address">Inserisci indirizzo lavoro</string>
    <string name="close">Chiudi</string>
    <string name="skip">Salta</string>
    <string name="tutorial_url">http://data.zegoapp.com/tutorial/{lang}.html</string>
    <string name="warning">Attenzione</string>
    <string name="impossible_to_connetc_to_server">Impossibile contattare il server</string>
    <string name="title_conf_dialog">Aggiornamento disponibile</string>
    <string name="body_conf_dialog">Clicca OK per scaricare la nuova versione dell\'app</string>
    <string name="ok">Ok</string>
    <string name="hint_wrong_number">Il numero inserito non sembra valido</string>
    <string name="permission_not_granted">Per procedere devi accettare tutti i permessi richiesti</string>
    <string name="pin_sent">Pin inviato</string>
    <string name="unknown_error">Errore sconsciuto</string>
    <string name="facebook_not_installed">L\'app Facebook non risulta installata sul tuo cellulare.</string>
    <string name="web_site">Sito web</string>
    <string name="faq">FAQ</string>
    <string name="info_legali"><![CDATA[Info legali (Privacy e T&C)]]></string>
    <string name="tutorial">Tutorial</string>
    <string name="info">Info</string>
    <string name="zego_web_site_url">http://www.zegoapp.com</string>
    <string name="faq_url">http://www.zegoapp.com/it/faq</string>
    <string name="title_dialog_card_ok">Welcome</string>
    <string name="body_welcome_dialog">Messaggio di welcome da inserire</string>
    <string name="now_connected_with_fb">Adesso sei connesso con Facebook</string>
    <string name="impossible_to_connect_with_fb">Impossibile connettersi a Facebook</string>
    <string name="share_promo_code">Con Zego puoi spostarti in città con un passaggio. Io lo uso già, scarica l\'app anche tu  su www.zegoapp.com!Con il codice {XX} ricevi 5€ di credito</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Sei sicuro di volere uscire da Zego?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="load_photo">Carica una foto profilo.</string>
    <string name="gallery">Galleria</string>
    <string name="camera">Scatta una foto</string>
    <string name="annulla">Annulla</string>
    <string name="crop_image">Taglia</string>
    <string name="profile_saving_ko">Si è verificato un errore nel salvataggio dell\'immagine profilo. Riprova</string>
    <string name="save_image">Salva</string>
    <string name="read_now">Leggi</string>
    <string name="term_condition_changed">Abbiamo aggiornato Termini e Condizioni del nostro servizio e Privacy Policy.</string>
    <string name="pink_driver">Pink</string>
    <string name="female_driver">Driver Femminile</string>
    <string name="zego">Zego</string>
    <string name="premium">Premium</string>
    <string name="standard_zego_driver"></string>
    <string name="checked_by_zego">Verificato da Zego</string>
    <string name="dai_un_voto_a">Dai un voto a</string>
    <string name="for_this_lift">per questo passaggio</string>
    <string name="leave_feedback_to_passenger">Lascia un feedback al tuo passeggero</string>
    <string name="fee_zego_included">Incluso fee di utilizzo </string>
    <string name="no_connectivity">Connessione Assente</string>
    <string name="payment">Metodo di pagamento</string>
    <string name="promo">Promo</string>
    <string name="passengers">Passeggeri</string>
    <string name="passenger">Passeggero</string>
    <string name="driver">Driver</string>
    <string name="estimated_price">Prezzo Stimato</string>
    <string name="send_feedback">Invia feedback</string>
    <string name="confirm">Conferma</string>
    <string name="confirm_starting_point">Conferma partenza</string>
    <string name="enter_destination">Conferma arrivo</string>
    <string name="find_lift">Chiedi passaggio</string>
    <string name="your_request_has_been_sent">Stiamo cercando un driver disponibile.\nRicorda che con Zego ci si siede davanti</string>
    <string name="cancel_request">Cancella Richiesta</string>
    <string name="cancel">Cancella</string>
    <string name="driver_arrives_in">arriverà in</string>
    <string name="share">Condividi</string>
    <string name="call">Telefona</string>
    <string name="motivation_title">Perchè vuoi cancellare?</string>
    <string name="motivation_feedback_question">Cosa non ti è piaciuto?</string>
    <string name="motivation_abort_question">Scegli un motivo per confermare la cancellazione</string>
    <string name="accept">Accetta</string>
    <string name="reject">Rifiuta</string>
    <string name="trip_lenght">Km passaggio</string>
    <string name="eta_label">Tempo Stimato</string>
    <string name="price_accepted">Rimborso</string>
    <string name="end_trip">Termina</string>
    <string name="start_ride">Inizia</string>
    <string name="no_valid_payment">Per chiedere un passaggio devi avere un metodo di pagamento valido</string>
    <string name="enter_one">Inserisci</string>
    <string name="no_gps">Abilita la localizzazione GPS</string>
    <string name="search_stating_address">Cerca indirizzo di partenza</string>
    <string name="search_destination_address">Cerca indirizzo di destinazione</string>
    <string name="driver_aborted_your_request">Il driver ha cancellato la tua richiesta</string>
    <string name="passenger_canceled_the_ride">Il passeggero ha cancellato la richiesta</string>
    <string name="passenger_aborted_the_ride">Il passeggero ha annullato la richiesta</string>
    <string name="zego_telephone_number">0283905112</string>
    <string name="share_to">Condividi</string>
    <string name="url_privacy_policy">http://www.zegoapp.com/it/privacy</string>
    <string name="no_location_available">Segnale GPS assente</string>
    <string name="price">Prezzo</string>
    <string name="logout_not_allowed">Impossibile fare logout</string>
    <string name="msg_call">Vuoi contattare</string>
    <string name="url_id_opaco">http://data.zegoapp.com/share/</string>
    <string name="pay_to_cancel">Scegli un motivo per confermare la cancellazione. Confermando sarà addebita la fee di utilizzo</string>
    <string name="end_ride_title">Hai avuto un problema?</string>
    <string name="alert_msg">Se hai avuto un problema clicca su Interrompi per fermare il passaggio e scrivi a Support@zegoapp.com per segnalarci il problema</string>
    <string name="operation_failed">Operazione non riuscita</string>
    <string name="two_min_to_cancel">Puoi cancellare la tua richiesta senza costi in </string>
    <string name="min_price_alert">Attenzione, nessun rimborso driver</string>
    <string name="no_card">Inserisci</string>
    <string name="ride_history_title">I miei passaggi</string>
    <string name="no_ride">Nessun passaggio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_ride_details">http://data.zegoapp.com/details/</string>
    <string name="ride_details_title">Dettagli #</string>
    <string name="expiry">Scadenza</string>
    <string name="add_new_card">Aggiungi carta</string>
    <string name="max_price_alert">warning prezzo massimo</string>
    <string name="remove_card_msg">Sei sicuro di voler rimuovere i dati di questa carta?</string>
    <string name="code_label">Codice:</string>
    <string name="expiry_label">Scade il</string>
    <string name="promo_percent_label">Sconto percentuale</string>
    <string name="promo_euro_label">Sconto euro</string>
    <string name="promo_freeride_label">Passaggi</string>
    <string name="promo_wallet_label">Crediti</string>
    <string name="promo_mgm_label">Referral Bonus</string>
    <string name="unknown_promo_label">N.A</string>
    <string name="free">gratis</string>
    <string name="details">Dettagli</string>
    <string name="add_new_promo">Inserisci codice</string>
    <string name="no_promo">Nessuna promo attiva</string>
    <string name="support_ride">Supporto</string>
    <string name="send_email">Seleziona un Client di posta</string>
    <string name="zego_support_email">support@zegoapp.com</string>
    <string name="subject_email_ride_support">Supporto per passaggio</string>
    <string name="load_documents">Completa profilo</string>
    <string name="url_zego_login">http://v2.zegoapp.com/gateway.php</string>
    <string name="driver_candidate">Completa il tuo profilo in pochi passi e attendi la nostra email di attivazione del profilo DRIVER</string>
    <string name="driver_rejected">La tua richiesta non è stata approvata</string>
    <string name="driver_missing_document">Affinchè la tua richiesta venga approvata devi fornire tutti i documenti necessari</string>
    <string name="contact_us">Contattaci</string>
    <string name="privacy">Privacy</string>
    <string name="tec">Termini e Condizioni</string>
    <string name="no_cards">Non hai ancora nessun metodo di pagamento</string>
    <string name="payment_failed">Pagamento in sospeso {x}€\nVerifica la carta e poi premi sotto per sbloccare il pagamento</string>
    <string name="try_now">PAGA ORA</string>
    <string name="promo_only_by_card">I crediti sono validi per i pagamenti con carta di crdito o carta prepagata</string>
</resources>