<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Font="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_cards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.sharethecity.mobile.letzgo.activities.MyCardsActivity">

    <include layout="@layout/header" android:id="@+id/header"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/cards_recycler_view"
        android:layout_below="@+id/header"
        android:layout_above="@+id/debt_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <it.sharethecity.mobile.letzgo.customviews.MyFontTextView
        android:id="@+id/no_cards_text_view"
        android:visibility="gone"
        android:layout_centerInParent="true"
        Font:customfont="Raleway-SemiBold.ttf"
        android:textColor="@color/gray_text_app"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/no_ride_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cards"
        />


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/debt_layout"
        android:visibility="gone"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/add_new_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <it.sharethecity.mobile.letzgo.customviews.MyFontTextView
            android:id="@+id/debt_text_view"
            android:layout_gravity="center_horizontal"
            Font:customfont="Raleway-SemiBold.ttf"
            android:textColor="@color/gray_text_app"
            android:gravity="center"
            android:textSize="@dimen/payment_failed_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/payment_failed"
            />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/try_now_text_view"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@drawable/red_button_selector"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="@dimen/paynow_text_size"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/try_now"
            />

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:visibility="gone"
        android:id="@+id/progress_wheel"
        android:layout_width="@dimen/hud_dimen"
        android:layout_height="@dimen/hud_dimen"
        android:layout_centerInParent="true"
        wheel:matProg_barColor="@android:color/white"
        android:background="@color/green_zego_with_alpha"
        wheel:matProg_progressIndeterminate="true" />

    <Button
        android:id="@+id/add_new_card_button"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:background="@drawable/green_button_selector"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:layout_width="match_parent"
        android:text="@string/add_new_card"
        android:layout_height="45dp" />

</RelativeLayout>
