<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.sharethecity.mobile.letzgo.activities.UserFormActivity">

    <include layout="@layout/header" android:id="@+id/header" />


    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="11.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <it.sharethecity.mobile.letzgo.customviews.RegularRelewayEditTextView
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences|textNoSuggestions"
                android:singleLine="true"
                android:textSize="@dimen/form_text_size"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray_text"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_text"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="11.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <it.sharethecity.mobile.letzgo.customviews.RegularRelewayEditTextView

                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textCapSentences|textNoSuggestions"
                android:singleLine="true"
                android:textSize="@dimen/form_text_size"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray_text"/>

            <View
                android:id="@+id/line1"
                android:layout_below="@+id/number_text_view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_text"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11.2">
            <it.sharethecity.mobile.letzgo.customviews.RegularRelewayEditTextView
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textSize="@dimen/form_text_size"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray_text"/>

            <View
                android:id="@+id/line3"
                android:layout_below="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_text"/>

            <it.sharethecity.mobile.letzgo.customviews.ItalicRelewayTextView
                android:layout_below="@+id/line3"
                android:id="@+id/hint_error"
                android:layout_marginTop="3dp"
                android:textColor="@color/red_error"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/fb_button"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/fb_button_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/fb_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fb_logo_mini"
                />
            <it.sharethecity.mobile.letzgo.customviews.BoldRelewayTextView
                android:id="@+id/complete_with_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fb_text_size"
                android:text="@string/complete_with_fb"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:visibility="gone"
        android:id="@+id/progress_wheel"
        android:layout_width="@dimen/hud_dimen"
        android:layout_height="@dimen/hud_dimen"
        android:layout_centerInParent="true"
        wheel:matProg_barColor="@android:color/white"
        android:background="@color/green_zego_with_alpha"
        wheel:matProg_progressIndeterminate="true" />


    <Button
        android:id="@+id/avanti_button"
        android:background="@color/gray_button"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/ahead"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
</RelativeLayout>
