<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    xmlns:Font="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_promo_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.sharethecity.mobile.letzgo.activities.PromoCodeActivity">


    <include layout="@layout/header" android:id="@+id/header"/>


    <LinearLayout
        android:id="@+id/promo_layout"
        android:layout_below="@+id/header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/promo_image"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/present"/>

        <RelativeLayout
            android:id="@+id/info_promo_layout"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_height="match_parent">


            <it.sharethecity.mobile.letzgo.customviews.MyFontTextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                Font:customfont = "Raleway-Regular.ttf"
                android:textColor="@color/darker_green_text"
                android:text="@string/promo_label"/>

            <EditText
                android:id="@+id/promo_code_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line"
                android:hint="@string/promo_code_hint"
                android:singleLine="true"
                android:textSize="@dimen/hint_promoCode_size"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:background="@android:color/transparent"/>
            <!--<it.sharethecity.mobile.letzgo.customviews.ItalicRelewayEditTextView-->
                <!--android:id="@+id/promo_code_editText"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_above="@+id/line"-->
                <!--android:hint="@string/promo_code_hint"-->
                <!--android:singleLine="true"-->
                <!--android:textSize="@dimen/hint_promoCode_size"-->
                <!--android:background="@android:color/transparent"/>-->
            <View
                android:id="@+id/line"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.5dp"
                android:background="@color/gray_text"/>

        </RelativeLayout>

    </LinearLayout>

    <it.sharethecity.mobile.letzgo.customviews.ItalicRelewayTextView
        android:layout_below="@+id/promo_layout"
        android:id="@+id/hint_error"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/red_error"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:visibility="gone"
        android:id="@+id/progress_wheel"
        android:layout_width="@dimen/hud_dimen"
        android:layout_height="@dimen/hud_dimen"
        android:layout_centerInParent="true"
        wheel:matProg_barColor="@android:color/white"
        android:background="@color/green_zego_with_alpha"
        wheel:matProg_progressIndeterminate="true" />
    <Button
        android:id="@+id/avanti_button"
        android:background="@color/gray_button"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/ahead"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
</RelativeLayout>
